syntax = "proto3";

import "commands.proto";

package store;

option go_package = "./pb";

message CommandRequestMessage {
  uint64 request_id = 1;
  oneof command {
    SetCommand set_command = 2;
    GetCommand get_command = 3;
    DelCommand del_command = 4;
  }
}

message ClientMessage {
  oneof message {
    CommandRequestMessage command_request = 1;
  }
}

message CommandResultMessage {
  uint64 request_id = 1;
  oneof command_result {
    SetCommandResult set_command_result = 2;
    GetCommandResult get_command_result = 3;
    DelCommandResult del_command_result = 4;
  }
  uint32 error_code = 5;
  optional string error_message = 6;
}

message ServerMessage {
  oneof message {
    CommandResultMessage command_result = 1;
  }
}
